[project]
name = "BasicToolsT"
version = "0.0.1"
authors = [
  { name="CursedGhoul", email="noemail@email.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["soundfile",
"sounddevice"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/CursedGhoul/BasicToolsT"
Issues = "https://github.com/CursedGhoul/BasicToolsT/issues"
